# Season_augmentation_EO

./: README.md  pyproject.toml  requirements.txt
configs/: inference.yaml  train_baseline.yaml  train_multigpu.yaml
scripts/: prepare_pairs.py  run_inference.sh  train_ddp.sh
src/data/: __init__.py  dataset.py  io.py  sampler.py
src/infer/: __init__.py  apply_params.py  augment_image.py  export_weights.py
src/models/: __init__.py  discriminator.py  generator.py  losses.py  param_head.py
src/train/: __init__.py  checkpoint.py  engine.py  train.py
src/utils/: __init__.py  config.py  distributed.py  logging.py  metrics.py
tests/: test_data_smoke.py  test_infer_smoke.py  test_models_smoke.py
