[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seasonal-rs-augmentation"
version = "0.1.0"
description = "Paired-season remote sensing augmentation with PyTorch DDP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "pyyaml>=6.0.0",
  "rasterio>=1.3.0",
  "albumentations>=1.4.0",
  "scikit-image>=0.22.0",
  "tensorboard>=2.15.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
